<resources>
    <string name="app_name">Clot-Mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="do_you_have_an_account">Do you have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="check_message">Please check your email, we will send the reset password link. If it is not show, check spam messages box</string>
    <string name="continue_even">Continue</string>
    <string name="create_one">Create one</string>
    <string name="reset_password">Reset password</string>
    <string name="send">Send</string>
    <string name="see_all">see all</string>
    <string name="top_selling">Top selling</string>
    <string name="shop_by_categories">Shop by Categories</string>
    <string name="women">Women</string>
</resources>